--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,34 @@
-#calculator {
-    background: #f5f5f5;
-    border: 1px solid #cecece;
-    padding: 10px;
-    width: 400px;
+.header {
+    background: #cecece;
+    padding: 20px;
+    margin-bottom: 50px;
 }
 
-.left-side {
-    width: 70%;
+.container {
+    width: 980px;
+    margin:  0 auto;
+}
+
+.posts {
+    margin:  0 auto;
+}
+
+.post {
     display: flex;
-    
-}
-
-.number {
-    width: 40px;
-    height: 40px;
-    line-height: 0;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin: 0 auto;
+    max-width: 675px;
+    width: 100%;
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #cecece;
-    cursor: pointer;
+    background: #f0f0f0;
+    padding: 20px;
 }
 
-.number:hover {
-    background: coral;
+.post .wrapper {
+    max-width: 400px;
 }
 
-.events {
-    width: 40px;
-    height: 40px;
-    line-height: 0;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #cecece;
-    cursor: pointer;
+.post img {
+    max-width: 200px;
 }
